--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
           <h2>상담 문의</h2>
           <hr class="separator">
           <div class="icon-tabs-centered">
-            <div class="col-sm-12 mr-auto text-center">
+            <!-- <div class="col-sm-12 mr-auto text-center">
               <a href="#" class="btn btn-primary btn-lg btn-appear mt20 mb20" style="font-size:16px;font-weight: bold;"><span>신청하기<i class="ion-android-arrow-forward"></i></span></a>
-            </div>
+            </div> -->
             <ul id="iconTabs" class="nav nav-tabs nav-tabs-center">
-              <li class="active"><a href="#tab-i1" data-toggle="tab"><span>000-000-0000<br>ASDF@GMAIL.COM</span></a></li>
+              <li class="active"><a href="#tab-i1" data-toggle="tab"><span>02-2138-0851<br>info@kicaseoul.org</span></a></li>
             </ul>
             <div id="myTabContent" class="tab-content">
               <div class="tab-pane fade active in" id="tab-i1" style="font-size:16px;!important">
