--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <!-- End Header -->
 
   <!-- Page Hero -->
-  <section id="hero" class="hero-fullscreen parallax bg-event">
+  <section id="hero" class="hero-fullscreen parallax">
     <div class="hero-container container">
       <div class="hero-content text-center">
 
