--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
               <div class="tab-pane fade active in" id="tab-i1" style="font-size:16px;!important">
                 <p>최상위 대학교의 입학 전략은 타 예술 대학교와 다릅니다.</p>
                 <p>일반적으로 경험할 수 없는 미술관 활동(예술 활동)은 입학의 전략입니다.</p>
-                <p>본 미술관은 평생교육기관으로서 학생 한 명, 한 명을 면밀하고 다각적으로 분석하여
-                  <p>합격의 지름길로 안내합니다.</p>
+                <p>본 미술관은 평생교육기관으로서 학생 한 명, 한 명을 </p>
+                <p>면밀하고 다각적으로 분석하여 합격의 지름길로 안내합니다.</p>
               </div>
             </div>
           </div>
@@ -610,7 +610,8 @@
               <p>특별한 포트폴리오(독보적인 경쟁력 확보) 아이비리그 출신의 국내외 저명한 작가들이 직접 교육하는 포트폴리오 수업</p>
             </div>
             <div>
-              <h2 class="mb10">EIP (EXIBITION INSIDER PROGRAM)</h2>
+              <h2 class="mb10">EIP</h2>
+              <h3>(EXIBITION INSIDER PROGRAM)</h3>
               <p>KMCA 에서만 가능한 대외활동, EIP 대외활동 전시회를 직접 기획하고, 작가로 출품할 수 있는 특별한 활동을 제공합니다.</p>
             </div>
             <div>
